2003/09/27 01:35 (+0200) kaffeetisch

	* t/GnomePopupMenu.t: Re-enabled the popup code, but make it skip it if
	we are not running 2.2.0 (which introduced Gtk2::Gdk::Event->new) or
	above.

2003/09/26 16:20 (+0200) kaffeetisch

	* TODO: Added libbonoboui.  Added explanations to gnome-config,
	gnome-triggers and GnomeThemeFile.

	* t/*: Removed unneeded main loops.  Fixed comments.

	* t/GnomeIconList.t: Filled the skeleton.

	* t/GnomeProgram.t: Changed human readable program name to avoid line
	wrapping.

	* xs/GnomeHelp.xs: Comment out gnome_help_display_uri.

	* xs/GnomeIconTheme.xs: Removed IconData prototypes.  They're not
	needed.

	A t/GnomeHelp
	A t/GnomeURL
	* MANIFEST: Initial tests.  Not run by make test since they require
	user interaction.

	A xs/GnomeUtil.xs
	A t/GnomeUtil.t
	* MANIFEST: Initial implementation of GnomeUtil.

2003/09/26 04:40 (-0400) muppetman

	* Gnome2.pm, META.yml, README, debian/changelog: release 0.36

	* Gnome2.pm: removed extraneous Exporter stuff.  we export nothing,
	don't waste the space.  add L<> to stuff in See Also.  update the
	Authors section to reflect the fact that torsten > is da man.

	* t/GnomeI18N.t: removed the no-op main loop to quell strange
	behavior that made the test turn up "dubious".

	* t/GnomePopupMenu.t: there is no Gtk2::Gdk::Event->new(), so the
	event synthesizing code just makes the test fail.  disabled for now.

2003/09/25 16:22 (+0200) kaffeetisch

	A t/GnomeI18N.t
	A xs/GnomeI18N.xs
	* MANIFEST
	* TODO: Initial implementation of GnomeI18N.

	A t/GnomeScore
	A xs/GnomeScore.xs
	* MANIFEST
	* TODO: Initial implementation of GnomeScore.  The test isn't run by
	make test because it would require certain privileges.

	A xs/GnomeUIDefs.xs
	* t/Gnome.t
	* MANIFEST
	* TODO: Implemented GnomeUIDefs.  Wow, what a PITA.

	* MANIFEST: Added xs/BonoboDock.xs and xs/BonoboDockItem.xs.

	* t/*: Use a constant for the number of tests.

	* xs/GnomeIconList.xs: Change comment to use /* */ instead of #.
